--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\POWER HOUSE\\anaconda3\\envs\\webdev\\python.exe"
+    "python.pythonPath": "C:\\Users\\TIMI.PC\\anaconda3\\envs\\webdev\\python.exe"
 }
